# substrate-storage-key-value-decode

./: Cargo.toml  README.md
src/: decode_storage_key_value.rs  main.rs  metadata.rs
test_data/: metadata.txt
